# mtlcm

./: .gitignore  README.md  pyproject.toml
mtlcm/: results.py  run.py
mtlcm/data/qm9/: graph_dataset.py
mtlcm/data/superconduct/: README.md
mtlcm/data/synthetic/: linear.py  non_linear.py
mtlcm/experiments/linear_identifiability/: linear_transform_synthethic.py
mtlcm/experiments/linear_identifiability/configs/: config.yaml  full_config_with_scaling.yaml  test_config.yaml  test_config_large.yaml  test_config_multi.yaml  test_config_multi_large.yaml
mtlcm/experiments/qm9/: linear_task_model.py  multitask_model.py  qm9_data.py  qm9_experiment.py
mtlcm/experiments/qm9/configs/: test_config.yaml
mtlcm/experiments/qm9/configs/latent_10/: config_0.yaml  config_1.yaml  config_2.yaml  config_3.yaml  config_4.yaml
mtlcm/experiments/qm9/configs/latent_5/: config_0.yaml  config_1.yaml  config_2.yaml  config_3.yaml  config_4.yaml
mtlcm/experiments/qm9/configs/latent_6/: config_0.yaml  config_1.yaml  config_2.yaml  config_3.yaml  config_4.yaml
mtlcm/experiments/superconduct/: superconduct_feature_regression.py
mtlcm/experiments/superconduct/configs/: exp_config.yaml  test_config.yaml
mtlcm/experiments/synthetic_multitask/: synthetic_multitask.py
mtlcm/experiments/synthetic_multitask/configs/: exp_config.yaml  test_config.yaml  test_config_cluster.yaml
mtlcm/models/: __init__.py  feature_extractors.py  linear_task_model.py  multitask_model.py
mtlcm/utils/data/: causal_synthetic.py  generics.py  lin_transform.py
(+15 files in other folders)
