[tool.poetry]
name = "mtlcm"
version = "0.1.0"
description = ""
authors = ["Julien Horwood, Wenlin Chen, Juyeon Heo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
typer = "0.9.0"
datamol = "0.10.3"
fsspec = "2023.6.0"
pandas = "2.0.2"
numpy = "1.24.3"
dgl = "1.1.0"
seaborn = "^0.13.2"
torch = "^2.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5"
pre-commit = "^3.7.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
